IK with non uniform scale broke the animation tools #51971

Closed
opened 2017-07-04 15:57:47 +02:00 by Paolo Acampora · 11 comments
Member

Blender Version
Broken: 2.78
Worked: 2.77

Non uniform transforms generated by the ik constraint cannot be used by blender operators: Apply visual transform to pose, Animation bake, Copy Attribute, FK/IK snap, none of them will work

Exact steps for others to reproduce the error
Attached blend file contains a very simple ik setup, and a copy with a baked animation, which behaves different. Baking the animation, applying to pose, storing the matrices and setting them, will not end up with the same pose.

This happens since non uniform scale IK has been introduced, and it's fixed disabling USE_NONUNIFORM_SCALE at build time

ik-stretch.blend

**Blender Version** Broken: 2.78 Worked: 2.77 Non uniform transforms generated by the ik constraint cannot be used by blender operators: **Apply visual transform to pose**, **Animation bake**, **Copy Attribute**, **FK/IK snap**, none of them will work **Exact steps for others to reproduce the error** Attached blend file contains a very simple ik setup, and a copy with a baked animation, which behaves different. Baking the animation, applying to pose, storing the matrices and setting them, will not end up with the same pose. This happens since non uniform scale IK has been introduced, and it's fixed disabling USE_NONUNIFORM_SCALE at build time [ik-stretch.blend](https://archive.blender.org/developer/F651793/ik-stretch.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @PaoloAcampora

Added subscriber: @PaoloAcampora
Author
Member
Added subscribers: @icappiello, @LucioRossi, @dragostanasie, @ideasman42, @mont29, @BrendonMurphy

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2017-07-05 17:21:57 +02:00

Not that familiar with this feature, it is implemented by @campbellbarton.

Campbell, mind having a look here?

Not that familiar with this feature, it is implemented by @campbellbarton. Campbell, mind having a look here?

This issue was referenced by f05f2f0336

This issue was referenced by f05f2f0336025f00a299ec930151a155d55c6ab3

Added subscriber: @brecht

Added subscriber: @brecht

I think D2088 changed two things:

  • Non-uniform scale is no longer inherited when applying the IK transforms, to match the IK solver normalizing the matrix and making the scale uniform.
  • IK stretch no longer affects the X and Z axes. I think this was an unintentional change. This is demonstrated in ik-stretch.blend, but not necessarily the reason the scripts and tools are broken.

There's a few different scaling cases:

  • No scale or uniform scale: no problem.
  • Non-uniform scale with inherit scale off, as in ik_non_uniform_scale.blend from D2088. This can probably be fixed without breaking the scripts and tools described in this ticket. P513 is an attempt at that but isn't quite right in all cases.
  • Non-uniform scale with inherit scale on. This is when you get shearing transforms which the IK solver can't represent or solve. Arguably shearing bones are never actually what you want, and perhaps not the important case in practice. This works a bit better after D2088 but can still fail.
I think [D2088](https://archive.blender.org/developer/D2088) changed two things: * Non-uniform scale is no longer inherited when applying the IK transforms, to match the IK solver normalizing the matrix and making the scale uniform. * IK stretch no longer affects the X and Z axes. I think this was an unintentional change. This is demonstrated in `ik-stretch.blend`, but not necessarily the reason the scripts and tools are broken. There's a few different scaling cases: * No scale or uniform scale: no problem. * Non-uniform scale with inherit scale off, as in `ik_non_uniform_scale.blend` from [D2088](https://archive.blender.org/developer/D2088). This can probably be fixed without breaking the scripts and tools described in this ticket. [P513](https://archive.blender.org/developer/P513.txt) is an attempt at that but isn't quite right in all cases. * Non-uniform scale with inherit scale on. This is when you get shearing transforms which the IK solver can't represent or solve. Arguably shearing bones are never actually what you want, and perhaps not the important case in practice. This works a bit better after [D2088](https://archive.blender.org/developer/D2088) but can still fail.
Member

hi, we need some resolve here, people are waiting for this to be fixed.
Thanks

hi, we need some resolve here, people are waiting for this to be fixed. Thanks
Author
Member

Sorry I could not dig into coding, busy days. The way I see it, if there is interest in keeping this feature but there is no way to make sure it behaves properly, it should definetely be an optional setting. This way the user can willingly activate non uniform scaling, and renounce the benefit of the animation tools in exchange.

In order to do this, we would need pose.ik_param to return a parameters class rather than a None, even when the solver is set to legacy, so some work would be required on the rna and of course on properties_data_armature.py

Regards

Sorry I could not dig into coding, busy days. The way I see it, if there is interest in keeping this feature but there is no way to make sure it behaves properly, it should definetely be an optional setting. This way the user can willingly activate non uniform scaling, and renounce the benefit of the animation tools in exchange. In order to do this, we would need `pose.ik_param` to return a parameters class rather than a None, even when the solver is set to legacy, so some work would be required on the rna and of course on properties_data_armature.py Regards

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51971
No description provided.